--- a/SegementacionSemantica.ipynb
+++ b/SegementacionSemantica.ipynb
@@ -26,6 +26,26 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "_ok59kM4lQrt",
+        "colab_type": "text"
+      },
+      "source": [
+        "# Segmentacion de escenas urbanas"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "_7u4_qLFlYDY",
+        "colab_type": "text"
+      },
+      "source": [
+        "Importamos las librerias"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "wbNLEJbgbzLf",
@@ -58,6 +78,16 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "vk6v5KQZlbwz",
+        "colab_type": "text"
+      },
+      "source": [
+        "Importamos el modelo preentrenado en en conjunto de datos cityscapes  de tensorflow."
+      ]
     },
     {
       "cell_type": "code",
@@ -257,6 +287,16 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "uCSXd0QsltPU",
+        "colab_type": "text"
+      },
+      "source": [
+        "Descargamos y ejecutamos para una imagen."
+      ]
     },
     {
       "cell_type": "code",
