--- a/Segmentacion_de_escenas_urbanas.ipynb
+++ b/Segmentacion_de_escenas_urbanas.ipynb
@@ -380,29 +380,20 @@
       "metadata": {
         "id": "8du6q32l0IGM",
         "colab_type": "code",
-        "outputId": "ccb8678f-a3f4-47be-f1a4-03cf02fcd95d",
+        "outputId": "d426efe2-ea2c-4260-e6ae-428e2f328e00",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 344
         }
       },
       "source": [
-        "class DriveSeg(object):\n",
-        "    \"\"\"Class to load MIT DriveSeg Dataset.\"\"\"\n",
+        "class GetSegGT(object):\n",
         "\n",
         "    def __init__(self, tarball_path):\n",
         "        self.tar_file = tarfile.open(tarball_path)\n",
         "        self.tar_info = self.tar_file.getmembers()\n",
         "    \n",
         "    def fetch(self, index):\n",
-        "        \"\"\"Get ground truth by index.\n",
-        "\n",
-        "        Args:\n",
-        "            index: The frame number.\n",
-        "\n",
-        "        Returns:\n",
-        "            gt: Ground truth segmentation map.\n",
-        "        \"\"\"\n",
         "        tar_info = self.tar_info[index + 1]  # exclude index 0 which is the parent directory\n",
         "        file_handle = self.tar_file.extractfile(tar_info)\n",
         "        gt = np.fromstring(file_handle.read(), np.uint8)\n",
@@ -416,19 +407,19 @@
         "if not os.path.isfile(SAMPLE_GT): \n",
         "    SAMPLE_GT = urllib.request.urlretrieve('https://github.com/anthonymig1/SegmentacionSemantica/raw/master/GT.tar.gz')[0]\n",
         "\n",
-        "dataset = DriveSeg(SAMPLE_GT)\n",
-        "print('visualizing ground truth annotation on the sample image...')\n",
+        "dataset = GetSegGT(SAMPLE_GT)\n",
+        "print('Segementacion correcta')\n",
         "\n",
         "original_im = Image.open(SAMPLE_IMAGE)\n",
         "gt = dataset.fetch(0)  # sample image is frame 0\n",
         "vis_segmentation(original_im, gt)"
       ],
-      "execution_count": 0,
+      "execution_count": 44,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "visualizing ground truth annotation on the sample image...\n"
+            "Segementacion correcta\n"
           ],
           "name": "stdout"
         },
@@ -460,16 +451,14 @@
       "metadata": {
         "id": "NCfpjBkxmhFw",
         "colab_type": "code",
-        "outputId": "f636b0bb-9482-4630-9ed9-490f8f523687",
+        "outputId": "e7c546c6-522e-4ac3-ac1a-fd66f427acf3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 139
         }
       },
       "source": [
-        "def evaluate_single(seg_map, ground_truth):\n",
-        "    \"\"\"Evaluate a single frame with the MODEL loaded.\"\"\"    \n",
-        "    # merge label due to different annotation scheme\n",
+        "def evaluate_single(seg_map, ground_truth): \n",
         "    seg_map[np.logical_or(seg_map==14,seg_map==15)] = 13\n",
         "    seg_map[np.logical_or(seg_map==3,seg_map==4)] = 2\n",
         "    seg_map[seg_map==12] = 11\n",
@@ -502,7 +491,7 @@
         "print('class IoU:')\n",
         "print(tabulate([class_iou], headers=LABEL_NAMES[[0,1,2,5,6,7,8,9,11,13]]))"
       ],
-      "execution_count": 40,
+      "execution_count": 45,
       "outputs": [
         {
           "output_type": "stream",
@@ -517,29 +506,6 @@
           ],
           "name": "stdout"
         }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "PPiRCwH_BF6X",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "UJZVjQx_BR8B",
-        "colab_type": "text"
-      },
-      "source": [
-        ""
       ]
     }
   ]
