--- a/Segmentacion_de_escenas_urbanas.ipynb
+++ b/Segmentacion_de_escenas_urbanas.ipynb
@@ -451,7 +451,7 @@
       "metadata": {
         "id": "NCfpjBkxmhFw",
         "colab_type": "code",
-        "outputId": "e7c546c6-522e-4ac3-ac1a-fd66f427acf3",
+        "outputId": "b8630da5-df46-471c-e2f5-bcdb8ce1eb03",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 139
@@ -487,19 +487,19 @@
         "acc, intersection, union = evaluate_single(seg_map, gt)\n",
         "class_iou = np.round(intersection / union, 5)\n",
         "print('pixel accuracy: %.5f'%acc)\n",
-        "print('mean class IoU:', np.mean(class_iou))\n",
-        "print('class IoU:')\n",
+        "print('media de IoU:', np.mean(class_iou))\n",
+        "print('IoU:')\n",
         "print(tabulate([class_iou], headers=LABEL_NAMES[[0,1,2,5,6,7,8,9,11,13]]))"
       ],
-      "execution_count": 45,
+      "execution_count": 46,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "evaluating on the sample image...\n",
             "pixel accuracy: 0.90720\n",
-            "mean class IoU: 0.5383739999999999\n",
-            "class IoU:\n",
+            "media de IoU: 0.5383739999999999\n",
+            "IoU:\n",
             "  carretera    acera    edificio    poste    semáforo    señal de tráfico    vegetación    terreno    persona    coche\n",
             "-----------  -------  ----------  -------  ----------  ------------------  ------------  ---------  ---------  -------\n",
             "    0.96126  0.34571     0.52489  0.16418     0.49512             0.52207       0.82085    0.05721    0.52215   0.9703\n"
