--- a/Segmentacion_de_escenas_urbanas.ipynb
+++ b/Segmentacion_de_escenas_urbanas.ipynb
@@ -380,7 +380,7 @@
       "metadata": {
         "id": "8du6q32l0IGM",
         "colab_type": "code",
-        "outputId": "d426efe2-ea2c-4260-e6ae-428e2f328e00",
+        "outputId": "0264ffed-aea0-4f40-a3b0-9259a1f2dd54",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 344
@@ -394,12 +394,12 @@
         "        self.tar_info = self.tar_file.getmembers()\n",
         "    \n",
         "    def fetch(self, index):\n",
-        "        tar_info = self.tar_info[index + 1]  # exclude index 0 which is the parent directory\n",
+        "        tar_info = self.tar_info[index + 1]  \n",
         "        file_handle = self.tar_file.extractfile(tar_info)\n",
         "        gt = np.fromstring(file_handle.read(), np.uint8)\n",
         "        gt = cv.imdecode(gt, cv.IMREAD_COLOR)\n",
-        "        gt = gt[:, :, 0]  # select a single channel from the 3-channel image\n",
-        "        gt[gt==255] = 19  # void class, does not count for accuracy\n",
+        "        gt = gt[:, :, 0]  \n",
+        "        gt[gt==255] = 19 \n",
         "        return gt\n",
         "\n",
         "\n",
@@ -411,10 +411,10 @@
         "print('Segementacion correcta')\n",
         "\n",
         "original_im = Image.open(SAMPLE_IMAGE)\n",
-        "gt = dataset.fetch(0)  # sample image is frame 0\n",
+        "gt = dataset.fetch(0)  \n",
         "vis_segmentation(original_im, gt)"
       ],
-      "execution_count": 44,
+      "execution_count": 49,
       "outputs": [
         {
           "output_type": "stream",
@@ -451,7 +451,7 @@
       "metadata": {
         "id": "NCfpjBkxmhFw",
         "colab_type": "code",
-        "outputId": "b8630da5-df46-471c-e2f5-bcdb8ce1eb03",
+        "outputId": "6dec78c2-1b90-41ab-da42-902906f7548b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 139
@@ -479,11 +479,11 @@
         "    SAMPLE_IMAGE = urllib.request.urlretrieve('https://raw.githubusercontent.com/anthonymig1/SegmentacionSemantica/master/GroundTrue.png')[0]    \n",
         "\n",
         "    \n",
-        "print('evaluating on the sample image...')\n",
+        "print('Evaluanco la imagen')\n",
         "\n",
         "original_im = Image.open(SAMPLE_IMAGE)\n",
         "seg_map = MODEL.run(original_im)\n",
-        "gt = dataset.fetch(0)  # sample image is frame 0\n",
+        "gt = dataset.fetch(0)\n",
         "acc, intersection, union = evaluate_single(seg_map, gt)\n",
         "class_iou = np.round(intersection / union, 5)\n",
         "print('pixel accuracy: %.5f'%acc)\n",
@@ -491,12 +491,12 @@
         "print('IoU:')\n",
         "print(tabulate([class_iou], headers=LABEL_NAMES[[0,1,2,5,6,7,8,9,11,13]]))"
       ],
-      "execution_count": 46,
+      "execution_count": 48,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "evaluating on the sample image...\n",
+            "Evaluanco la imagen\n",
             "pixel accuracy: 0.90720\n",
             "media de IoU: 0.5383739999999999\n",
             "IoU:\n",
