--- a/Segmentacion_de_escenas_urbanas.ipynb
+++ b/Segmentacion_de_escenas_urbanas.ipynb
@@ -451,7 +451,7 @@
       "metadata": {
         "id": "NCfpjBkxmhFw",
         "colab_type": "code",
-        "outputId": "6dec78c2-1b90-41ab-da42-902906f7548b",
+        "outputId": "1fd1de44-e43d-4fef-97f5-f2b6813a58f8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 139
@@ -479,7 +479,7 @@
         "    SAMPLE_IMAGE = urllib.request.urlretrieve('https://raw.githubusercontent.com/anthonymig1/SegmentacionSemantica/master/GroundTrue.png')[0]    \n",
         "\n",
         "    \n",
-        "print('Evaluanco la imagen')\n",
+        "print('Evaluando la imagen')\n",
         "\n",
         "original_im = Image.open(SAMPLE_IMAGE)\n",
         "seg_map = MODEL.run(original_im)\n",
@@ -491,12 +491,12 @@
         "print('IoU:')\n",
         "print(tabulate([class_iou], headers=LABEL_NAMES[[0,1,2,5,6,7,8,9,11,13]]))"
       ],
-      "execution_count": 48,
+      "execution_count": 50,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Evaluanco la imagen\n",
+            "Evaluando la imagen\n",
             "pixel accuracy: 0.90720\n",
             "media de IoU: 0.5383739999999999\n",
             "IoU:\n",
