--- a/Segmentacion_de_escenas_urbanas.ipynb
+++ b/Segmentacion_de_escenas_urbanas.ipynb
@@ -451,14 +451,14 @@
       "metadata": {
         "id": "NCfpjBkxmhFw",
         "colab_type": "code",
-        "outputId": "1fd1de44-e43d-4fef-97f5-f2b6813a58f8",
+        "outputId": "5a22efc7-40d2-4f7c-b429-bd9fc39193c8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 139
         }
       },
       "source": [
-        "def evaluate_single(seg_map, ground_truth): \n",
+        "def evaluar(seg_map, ground_truth): \n",
         "    seg_map[np.logical_or(seg_map==14,seg_map==15)] = 13\n",
         "    seg_map[np.logical_or(seg_map==3,seg_map==4)] = 2\n",
         "    seg_map[seg_map==12] = 11\n",
@@ -484,14 +484,14 @@
         "original_im = Image.open(SAMPLE_IMAGE)\n",
         "seg_map = MODEL.run(original_im)\n",
         "gt = dataset.fetch(0)\n",
-        "acc, intersection, union = evaluate_single(seg_map, gt)\n",
+        "acc, intersection, union = evaluar(seg_map, gt)\n",
         "class_iou = np.round(intersection / union, 5)\n",
         "print('pixel accuracy: %.5f'%acc)\n",
         "print('media de IoU:', np.mean(class_iou))\n",
         "print('IoU:')\n",
         "print(tabulate([class_iou], headers=LABEL_NAMES[[0,1,2,5,6,7,8,9,11,13]]))"
       ],
-      "execution_count": 50,
+      "execution_count": 51,
       "outputs": [
         {
           "output_type": "stream",
